--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/abort-controller": "^2.1.2",
     "@azure/data-tables": "^13.3.0",
     "@azure/functions": "^4.0.0"
   },
